@@ -1,3 +1,0 @@
-
-This directory contains GTK+-only replicas of widgets requiring GNOME.
-
